--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML Template</title>
+  <title>HTML template</title>
 </head>
 <body>
 
   <header>
-    <h1>HTML Template</h1>
+    <h1>HTML template</h1>
   </header>
 
   <main>
