--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<head>
-  <meta charset="utf-8">
+<head><meta charset="utf-8">
   <title>HTML template</title>
 </head>
 <body>
