--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
   <title>HTML template</title>
+  <meta name="viewport" content="width=devicewidth,initial-scale=1">
 </head>
 <body>
 
